Mon Mar  7 22:45:36 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/AssociationData.h:
        * dds/DCPS/ContentFilteredTopicImpl.cpp:
        * dds/DCPS/DataWriterImpl.h:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/DomainParticipantImpl.h:
        * dds/DCPS/Util.h:
        * dds/DCPS/transport/framework/TransportSendStrategy.cpp:
        * dds/idl/CPPTemplate.txt:
        * tests/DCPS/DCPSInfoRepo/DCPSDataWriterI.cpp:
        * tests/DCPS/DCPSInfoRepo/subscriber.cpp:

          Fixed scoreboard errors and warnings from my commit last Friday.

Mon Mar  7 19:40:47 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.sdk.model/xsl/traits_cpp.xsl:

          Don't mention specific_config when it has no subelements to
          prevent warning.

Mon Mar  7 15:52:09 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.help/html/modeling/tasks/data_lib/types/struct.html:

          Put discussion on Keys under its own header to make stand out.

        * tools/modeling/plugins/org.opendds.modeling.help/html/modeling/tasks/opendds_models/model_population.html:

          Added caution about modifying the model directly using the Property view.

Mon Mar  7 15:22:05 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.help/html/modeling/images/datalib_collection_types_palette.png:
        * tools/modeling/plugins/org.opendds.modeling.help/html/modeling/images/datalib_simple_types_palette.png:
        * tools/modeling/plugins/org.opendds.modeling.help/html/modeling/images/datalib_struct_palette.png:
        * tools/modeling/plugins/org.opendds.modeling.help/html/modeling/images/datalib_typedef_field_palette.png:
        * tools/modeling/plugins/org.opendds.modeling.help/html/modeling/images/datalib_union_palette.png: